--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,6 +1,6 @@
 html {
     box-sizing: border-box;
-    font-size: 14px;
+    font-size: .9em;
 }
 
 body {
@@ -16,8 +16,9 @@ h1 {
     font-family: 'Libre Baskerville', 'Helvetica', sans-serif;
 }
 
-p, ul {
+p, ul, ol{
     font-style: italic;
+    font-size: .94em;
 }
 
 ul {
@@ -26,6 +27,14 @@ ul {
 
 .sub {
     font-style: italic;
+}
+
+.pull-left {
+    float: left;
+}
+
+.pull-right {
+    float: right;
 }
 
 .outer {
@@ -64,10 +73,6 @@ ul {
     margin: 20px 0;
 }
 
-/*.vert-divider {
-    height:
-}*/
-
 .profile {
     width: 270px;
     height: 270px;
@@ -81,3 +86,35 @@ ul {
     margin: 0 auto;
 }
 
+.button {
+    width: 200px;
+    height: 120px;
+    padding: 10px 20px;
+    border-radius: 3px;
+    background-color: blue;
+    text-decoration: none;
+    color: #fff;
+    font-size: .8em;
+    font-weight: bold;
+/*    text-align: right;
+*/}
+
+.button.facebook {
+    background-color: #2A49A5;
+}
+
+.button.github {
+    background-color: #040204;
+}
+
+.button.twitter {
+    background-color: #00aced;
+}
+
+.button.linkedin {
+    background-color: #007bb6;
+}
+
+.button.facebook:hover, .button.facebook:focus {
+    opacity: 1.5;
+}
