--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -37,7 +37,7 @@ ul {
 .skill-bar > div:first-child {
     height: 100%;
     float: left;
-    background-color: #E02C2C;
+    background-color: #5A63E4;
     border-radius: inherit;
     box-shadow: 3px 0px 2px #777;
 }
@@ -69,7 +69,7 @@ ul {
     box-sizing: border-box;
     background: #E7E6E6;
     margin: 0 auto;
-    padding: 30px 5%;
+    padding: 40px 5% 60px;
     border-color: #666;
     border-style: solid;
     border-width: 8px 0 2px;
@@ -103,35 +103,36 @@ ul {
     margin: 0 auto;
 }
 
-.button {
-    width: 200px;
-    height: 120px;
-    padding: 10px 20px;
-    border-radius: 3px;
+.social-button {
+    margin: 0 5px 20px;
+    text-align: center;
+    padding: 7px 8px;
+    border-radius: 50%;
     background-color: blue;
     text-decoration: none;
+    height: 40px;
+    width: 40px;
     color: #fff;
     font-size: .8em;
     font-weight: bold;
-/*    text-align: right;
-*/}
+}
 
-.button.facebook {
+.social-button.facebook {
     background-color: #2A49A5;
 }
 
-.button.github {
+.social-button.github {
     background-color: #040204;
 }
 
-.button.twitter {
+.social-button.twitter {
     background-color: #00aced;
 }
 
-.button.linkedin {
+.social-button.linkedin {
     background-color: #007bb6;
 }
 
-.button.facebook:hover, .button.facebook:focus {
+.social-button.facebook:hover, .social-button.facebook:focus {
     opacity: 1.5;
 }
